--- a/Results.tex
+++ b/Results.tex
@@ -13,9 +13,9 @@
 %% Explain what we are trying to do (detect RecB binding to DNA)
 %% Mention that bacteria experience endogenous damage
 %% Explain the experiment principle, conclude with the fact that we are detecting RecB spots (SI control: no spots on the free Halo images)
-To image Rec\-BCD in live \textit{E. coli}, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:endogenous}A). The fusion was previously used and characterised in the lab, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process.\cite{Lepore2019a} To detect the binding of RecB to DNA, we applied the previously developed technique of localisation enhancement.\cite{Yu2006, Elf2007}  Since RecB is present at low copy numbers in \textit{E. coli} ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made diffusing molecules appear as weak homogeneous signal in the cell, while DNA-bound molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots). (Figures \ref{Fig:endogenous}A, B) The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these structures were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). Seeing RecB spots in cells that were not exposed to an exogenous source of DNA damage was unsurprising, as these cells are still subject to occasional endogenous DNA damage. This can be due for example to collisions between the replication fork and DNA-bound proteins, and was previously reported to affect $\sim$18\% of cells per cell cycle.\cite{Sinha2018}
+To image Rec\-BCD in live \textit{E. coli}, we used a Halo-tag fusion to the RecB subunit, conjugated to the JF549 fluorescent dye (Figure \ref{Fig:endogenous}A). The fusion was previously used and characterised in the lab, ensuring specific one-to-one labelling of RecB molecules without adverse effects on the DNA repair process.\cite{Lepore2019a} To detect the binding of RecB to DNA, we applied the previously developed technique of localisation enhancement.\cite{Yu2006, Elf2007}  Since RecB is present at low copy numbers in \textit{E. coli} ($\sim$5 molecules per cell on average\cite{Lepore2019a}), imaging live cells with a long exposure time (1 second) made diffusing molecules appear as weak homogeneous signal in the cell, while DNA-bound molecules formed intense diffraction-limited spots (referred to throughout this article as RecB spots, Figures \ref{Fig:endogenous}A, B) The complete absence of similar spots in cells expressing the free Halo-tag from a plasmid confirmed that these structures were specific to RecB (Supp. Figure \ref{SIFig:freehalo_image}). Seeing RecB spots in cells that were not exposed to an exogenous source of DNA damage was unsurprising, as these cells are still subject to occasional endogenous DNA damage, such as replication fork collisions which were previously reported to affect $\sim$18\% of cells per cell cycle.\cite{Sinha2018}
 
-Acquiring short timelapse videos (50 images over 100 seconds, Figure \ref{Fig:endogenous}C) allowed us to measure the binding time of RecB on DNA. The resulting spot lifetime histogram was well-fitted by a mono-exponential decay model ($y=a.e^{-k.t}$, with a the fit amplitude and k the dissociation rate from DNA), consistent with a homogenous populations of fluorescent spots (Figure \ref{Fig:endogenous}D). The fitted spot lifetime was 1.5 sec $\pm$ 0.1. This prolonged imaging of the RecB-Halo fusion and quantification of DNA binding times was only possible thanks to the exceptional photostability of the JF549 dye, which displayed slow photobleaching and no blinking (Supp. Note \ref{note:dye_bleaching} and Supp. Fig. \ref{SIFig:dye_bleaching}). 
+Acquiring short timelapse videos (50 images over 100 seconds, Figure \ref{Fig:endogenous}C) allowed us to measure the lifetime of the RecB spots. The resulting histogram was well-fitted by a mono-exponential decay model ($y=a.e^{-k.t}$, with a the fit amplitude and k the dissociation rate from DNA), consistent with a homogenous populations of fluorescent spots (Figure \ref{Fig:endogenous}D). The fitted spot lifetime was 1.5 sec $\pm$ 0.1. This prolonged imaging of the RecB-Halo fusion was only possible thanks to the exceptional photostability of the JF549 dye, which displayed slow photobleaching and no blinking (Supp. Note \ref{note:dye_bleaching} and Supp. Fig. \ref{SIFig:dye_bleaching}). 
 
 %% RecA makes foci and filaments
 \subsubsection*{RecA forms foci and filaments}
@@ -38,7 +38,7 @@ To gain more insight into DNA binding by RecB, we induced additional DSBs by add
 %%% They are not well-fitted by a monoexponential decay (SI fig)
 %%% We fit with a bi-exponential decay model
 %%% Mention lifetimes/proportions, in table
-Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained relatively more long-lived spots. Fitting with a mono-exponential decay model as in Figure \ref{Fig:endogenous}D did not account well for these long-lived spots (Supp. Figure \ref{SIFig:monoexp_fits}), especially at the higher ciprofloxacin concentrations. This suggested that the new long-lived spots that appeared under exposure to ciprofloxacin corresponded to a new population of RecB spots, that had a slower dissociation rate from DNA than the ones observed under endogenous damage. Indeed, fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted much better for the longer-lived RecB spots (Figure \ref{Fig:lifetime_fits}). The bi-exponential fit outlined two populations of spots, with different lifetimes: a short-lived one, with lifetimes ranging from 1.2 to 1.5 sec, and a longer-lived one, with lifetime between 5 and 10 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events ($>$ 90\% of the spots), the proportion of long-lived spots tended to increase under higher ciprofloxacin exposure (from 3.4\% $\pm$ 0.9 under 3 ng/mL ciprofloxacin to 7.5\% $\pm$ 2 under 30 ng/mL ciprofloxacin).
+Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained more long-lived spots. Fitting with a mono-exponential decay model as in Figure \ref{Fig:endogenous}D did not account well for these long-lived spots (Supp. Figure \ref{SIFig:monoexp_fits}), especially at the higher ciprofloxacin concentrations. This suggested that the new long-lived spots that appeared under exposure to ciprofloxacin corresponded to a new population of RecB spots, that had a slower dissociation rate from DNA than the ones observed under endogenous damage. Indeed, fitting with a bi-exponential decay model ($y = a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$) accounted much better for the longer-lived RecB spots (Figure \ref{Fig:lifetime_fits}). The bi-exponential fit outlined two populations of spots, with different lifetimes: a short-lived one, with lifetimes ranging from 1.2 to 1.5 sec, and a longer-lived one, with lifetime between 5 and 10 sec (Table \ref{tab:fit_results}). Even though the short-lived spots always represented a majority of events ($>$ 90\% of the spots), the proportion of long-lived spots tended to increase under higher ciprofloxacin exposure (from 3.4\% $\pm$ 0.9 under 3 ng/mL ciprofloxacin to 7.5\% $\pm$ 2 under 30 ng/mL ciprofloxacin).
 
 \begin{table}[htbp]
     \centering
