Added strains to table, fixed pBad-Halo ref

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -40,10 +40,12 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
         \toprule
         Name & Description & Reference\\
         \midrule
-        MEK2623 & MG1655, \textit{recB::halotag recA::syfp2} & this work\\
-        MEK2622 & MG1655, \textit{recB::halotag $\Delta$recA} & this work \\ % = AL133_1
-        MEK2324 & MG1655, \textit{recB1080::halotag HK022::psfiA-GFP} &  \\ % Alessia's article
-        MEK2627 & MG1655, \textit{recB1080::halotag $\Delta$recA} & this work \\
+        MEK2623 & MG1655 \textit{recB::halotag recA::syfp2} & this work\\
+        MEK2622 & MG1655 \textit{recB::halotag $\Delta$recA} & this work \\ % = AL133_1
+        MEK2324 & MG1655 \textit{recB1080::halotag HK022::psfiA-GFP} &  \\ % Alessia's article
+        MEK2627 & MG1655 \textit{recB1080::halotag $\Delta$recA} & this work \\
+        MEK65 & MG1655 \textit{recB::halotag} & \cite{Lepore2019a} \\
+        BHC9 & MG1655 \textit{$\Delta$recA} & Ref? \\
         \bottomrule
     \end{tabular}
     \caption{List of bacterial strains used in this study}
@@ -57,7 +59,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
         \toprule
         Name & Description & Reference\\
         \midrule
-        pDT5 & Halo-tag inserted into pBAD33 by restriction cloning & this work \\
+        pSF1 & Expression of HaloTag under the control of the pBAD promoter & \cite{Lepore2019a} \\
         pDT6 & GamL inserted into pBAD322K by restriction cloning & \cite{Wilkinson2016} \\
         \bottomrule
     \end{tabular}
