Adjusted Fig sizes

--- a/Results.tex
+++ b/Results.tex
@@ -5,7 +5,7 @@
 
 \begin{figure*}[htbp]
     \centering
-    \includegraphics[width=\textwidth]{Figures/Fig1_endogenous.pdf}
+    \includegraphics[width=.8\textwidth]{Figures/Fig1_endogenous.pdf}
     \caption{Imaging DSB repair in live \textit{E. coli}. \textbf{(A)} Scheme of our experimental protocol. The RecB subunit of the RecBCD complex is fused to a Halo-tag, bound by the JF549 fluorescent dye. A long exposure time (1 sec) makes diffusing molecules appear as diffuse signal in the cell, while DNA-bound molecules are visible as bright, diffraction-limited spots. \textbf{(B)} Example image of a RecB spot (white arrow). \textbf{(C)} Example images of a timelapse acquisition (1 image every 2 sec for 100 sec). \textbf{(D)} Histogram of the lifetime of RecB spots (bars) fitted with a mono-exponential decay function ($y=a.e^{-k.t}$) \textbf{(E)} Scheme of our RecA imaging system (from \cite{Wiktor2021}). Free and fluorescently labelled RecA are present in equal amounts in the cell. \textbf{(F)} Example image of RecA imaging under endogenous DNA damage. RecA is diffuse in most cells, a RecA focus and a RecA filament are visible in two of the cells (white arrows). \textbf{(G)} Proportions of cells containing the different RecA structures (dots: individual datasets, bars: average between datasets).}
     \label{Fig:endogenous}
 \end{figure*}
@@ -26,7 +26,7 @@ One of RecBCD's purposes when processing a DSB is to facilitate the loading of t
 
 \begin{figure*}[htbp]
     \centering
-    \includegraphics[width=\textwidth]{Figures/Fig2_cipro_nSpots.pdf}
+    \includegraphics[width=.8\textwidth]{Figures/Fig2_cipro_nSpots.pdf}
     \caption{RecB DNA binding under ciprofloxacin exposure. \textbf{(A)} Example kymographs of RecB throughout an acquisition. A short timelapse (100 sec) is acquired at a different position every 2 min for 75 min. \textbf{(B)} RecB spot lifetime histograms at 3, 10, 20 and 30 ng/mL ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \textbf{(C)} RecB spot lifetime histograms for cells over-expressing the Gam protein, under 0 or 30 ng/mL ciprofloxacin (bars), fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \textbf{(D)} Proportion of RecB spots that are shorter than a given lifetime, for cells over-expressing the Gam protein. Black dots show individal datasets, the black line is the average between them, and the red dashed line shows the smallest lifetime at which 95\% of RecB spots are shorter.}
     \label{Fig:lifetime_fits}
 \end{figure*}
@@ -81,7 +81,7 @@ To further characterise the long-lived DNA binding events, we defined a spot lif
 
 \begin{figure*}[htbp]
     \centering
-    \includegraphics[width=\textwidth]{Figures/Fig4_cipro_30ngmL.pdf}
+    \includegraphics[width=.8\textwidth]{Figures/Fig4_cipro_30ngmL.pdf}
     \caption{Accumulation of DSB repair intermediates under exposure to ciprofloxacin. \textbf{(A)} Number of long-lived ($>$10 sec) RecB spots per cell area. Black dots represent individual datasets, and bars the average between them. \textbf{(B)} Position of long-lived RecB spots along the cell's long axis (normalised). \textbf{(C)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments). Arrows point to representative examples of each of these structures. \textbf{(D)} Proportion of cells containing RecA foci or filaments. Black dots represent individual datasets, and bars the average between them.}
     \label{Fig:high_cipro}
 \end{figure*}
@@ -104,7 +104,7 @@ We observe two regimes of DNA repair after ciprofloxacin exposure. At sub-MIC ci
 
 \begin{figure*}[htbp]
     \centering
-    \includegraphics[width=\textwidth]{Figures/Fig5_mutants.pdf}
+    \includegraphics[width=.8\textwidth]{Figures/Fig5_mutants.pdf}
     \caption{RecB binding to DNA (RecB spots with lifetime $>$10 sec) in the \dreca, \teneighty\ and \dreca-\teneighty\ mutant strains. \textbf{(A)} Number of long-lived DNA-bound RecB per cell area. Black dots represent individual datasets, and bars the average between them. \textbf{(B)} Position of long-lived DNA-bound RecB along the cell's long axis (normalised).}
     \label{Fig:mutants}
 \end{figure*}
