--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -470,3 +470,199 @@
    url = {https://journals.asm.org/doi/10.1128/aac.50.1.362-364.2006},
    year = {2006},
 }
+@article{Lesterlin2013,
+   abstract = {RecA bundles are shown to be important for the pairing of homologous loci that have segregated to opposite ends of the cell during DNA double-strand break repair in vivo in Escherichia coli. Although bacterial RecA protein functions as a filament during DNA strand exchange, early studies of RecA also noted that, in vivo, it formed bundles. These bundles were inactive in vitro, so were thought to be a way of storing RecA until it was needed. David Sherratt and colleagues now show that RecA bundles do have an important function in vivo. Super-resolution microscopy imaging shows that bundles are excluded from the bulk of the nucleoid and locate to the cell periphery where they facilitate the pairing of homologous loci that have segregated to opposite ends of the cell. After sister locus pairing, RecA bundles disassemble. DNA double-strand break (DSB) repair by homologous recombination has evolved to maintain genetic integrity in all organisms1. Although many reactions that occur during homologous recombination are known1,2,3, it is unclear where, when and how they occur in cells. Here, by using conventional and super-resolution microscopy, we describe the progression of DSB repair in live Escherichia coli. Specifically, we investigate whether homologous recombination can occur efficiently between distant sister loci that have segregated to opposite halves of an E. coli cell. We show that a site-specific DSB in one sister can be repaired efficiently using distant sister homology. After RecBCD processing of the DSB, RecA is recruited to the cut locus, where it nucleates into a bundle that contains many more RecA molecules than can associate with the two single-stranded DNA regions that form at the DSB. Mature bundles extend along the long axis of the cell, in the space between the bulk nucleoid and the inner membrane. Bundle formation is followed by pairing, in which the two ends of the cut locus relocate at the periphery of the nucleoid and together move rapidly towards the homology of the uncut sister. After sister locus pairing, RecA bundles disassemble and proteins that act late in homologous recombination are recruited to give viable recombinants 1–2-generation-time equivalents after formation of the initial DSB. Mutated RecA proteins that do not form bundles are defective in sister pairing and in DSB-induced repair. This work reveals an unanticipated role of RecA bundles in channelling the movement of the DNA DSB ends, thereby facilitating the long-range homology search that occurs before the strand invasion and transfer reactions.},
+   author = {Christian Lesterlin and Graeme Ball and Lothar Schermelleh and David J. Sherratt},
+   doi = {10.1038/nature12868},
+   issn = {1476-4687},
+   issue = {7487},
+   journal = {Nature 2013 506:7487},
+   keywords = {Chromosomes,DNA recombination,Double,strand DNA breaks},
+   month = {12},
+   pages = {249-253},
+   pmid = {24362571},
+   publisher = {Nature Publishing Group},
+   title = {RecA bundles mediate homology pairing between distant sisters during DNA break repair},
+   volume = {506},
+   url = {https://www.nature.com/articles/nature12868},
+   year = {2013},
+}
+@article{Badrinarayanan2015,
+   abstract = {Double-strand breaks (DSBs) can lead to the loss of genetic information and cell death. Although DSB repair via homologous recombination has been well characterized, the spatial organization of this process inside cells remains poorly understood, and the mechanisms used for chromosome resegregation after repair are unclear. In this paper, we introduced site-specific DSBs in Caulobacter crescentus and then used time-lapse microscopy to visualize the ensuing chromosome dynamics. Damaged loci rapidly mobilized after a DSB, pairing with their homologous partner to enable repair, before being resegregated to their original cellular locations, independent of DNA replication. Origin-proximal regions were resegregated by the ParABS system with the ParA structure needed for resegregation assembling dynamically in response to the DSB-induced movement of an origin-associated ParB away from one cell pole. Origin-distal regions were resegregated in a ParABS-independent manner and instead likely rely on a physical, spring-like force to segregate repaired loci. Collectively, our results provide a mechanistic basis for the resegregation of chromosomes after a DSB.},
+   author = {Anjana Badrinarayanan and Tung B.K. Le and Michael T. Laub},
+   doi = {10.1083/JCB.201505019},
+   issn = {0021-9525},
+   issue = {3},
+   journal = {Journal of Cell Biology},
+   keywords = {double strand break repair,double-stranded dna breaks},
+   month = {8},
+   pages = {385-400},
+   pmid = {26240183},
+   publisher = {The Rockefeller University Press},
+   title = {Rapid pairing and resegregation of distant homologous loci enables double-strand break repair in bacteria},
+   volume = {210},
+   url = {www.jcb.org/cgi/doi/10.1083/jcb.201505019},
+   year = {2015},
+}
+@article{Kidane2005,
+   abstract = {We show that RecN protein is recruited to a defined DNA double strand break (DSB) in Bacillus subtilis cells at an early time point during repair. Because RecO and RecF are successively recruited to DSBs, it is now clear that dynamic DSB repair centers (RCs) exist in prokaryotes. RecA protein was also recruited to RCs and formed highly dynamic filamentous structures, which we term threads, across the nucleoids. Formation of RecA threads commenced ∼30 min after the induction of DSBs, after RecN recruitment to RCs, and disassembled after 2 h. Time-lapse microscopy showed that the threads rapidly changed in length, shape, and orientation within minutes and can extend at 1.02μm/min. The formation of RecA threads was abolished in recJ addAB mutant cells but not in each of the single mutants, suggesting that RecA filaments can be initiated via two pathways. Contrary to proteins forming RCs, DNA polymerase I did not form foci but was present throughout the nucleoids (even after induction of DSBs or after UV irradiation), suggesting that it continuously scans the chromosome for DNA lesions. © The Rockefeller University Press.},
+   author = {Dawit Kidane and Peter L. Graumann},
+   doi = {10.1083/JCB.200412090/VIDEO-4},
+   issn = {00219525},
+   issue = {3},
+   journal = {Journal of Cell Biology},
+   keywords = {bacillus subtilis,burkina faso,chromosomes,dna,dna polymerase i,dna, double-stranded,double-stranded dna breaks,prokaryotic cells,rec a recombinases},
+   month = {9},
+   pages = {357-366},
+   pmid = {16061691},
+   publisher = {The Rockefeller University Press},
+   title = {Dynamic formation of RecA filaments at DNA double strand break repair centers in live cells},
+   volume = {170},
+   url = {http://www.jcb.org/cgi/},
+   year = {2005},
+}
+@article{Renzette2005,
+   abstract = {RecA is important in recombination, DNA repair and repair of replication forks. It functions through the production of a protein-DNA filament. To study the localization of RecA in live Escherichia coli cells, the RecA protein was fused to the green fluorescence protein (GFP). Strains with this gene have recombination/DNA repair activities three- to tenfold below wild type (or about 1000-fold above that of a recA null mutant). RecA-GFP cells have a background of green fluorescence punctuated with up to five foci per cell. Two types of foci have been defined: 4,6-diamidino-2-phenylindole (DAPI)-sensitive foci that are bound to DNA and DAPI-insensitive foci that are DNA-less aggregates/storage structures. In log phase cells, foci were not localized to any particular region. After UV irradiation, the number of foci increased and they localized to the cell centre. This suggested colocalization with the DNA replication factory. recA, recB and recF strains showed phenotypes and distributions of foci consistent with the predicted effects of these mutations. © 2005 Blackwell Publishing Ltd.},
+   author = {Nicholas Renzette and Nathan Gumlaw and Jared T. Nordman and Marlee Krieger and Su Ping Yeh and Edward Long and Richard Centore and Ruethairat Boonsombat and Steven J. Sandler},
+   doi = {10.1111/J.1365-2958.2005.04755.X},
+   isbn = {4135451578},
+   issn = {1365-2958},
+   issue = {4},
+   journal = {Molecular Microbiology},
+   month = {8},
+   pages = {1074-1085},
+   pmid = {16091045},
+   publisher = {John Wiley & Sons, Ltd},
+   title = {Localization of RecA in Escherichia coli K-12 using RecA–GFP},
+   volume = {57},
+   url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1365-2958.2005.04755.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2958.2005.04755.x https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2958.2005.04755.x},
+   year = {2005},
+}
+@article{Centore2007,
+   abstract = {RecA is important for recombination, DNA repair, and SOS induction. In Escherichia colt, RecBCD, RecFOR, and RecJQ prepare DNA substrates onto which RecA binds. UvrD is a 3′-to-5′ helicase that participates in methyl-directed mismatch repair and nucleotide excision repair. uvrD deletion mutants are sensitive to UV irradiation, hypermutable, and hyper-rec. In vitro, UvrD can dissociate RecA from single-stranded DNA. Other experiments suggest that UvrD removes RecA from DNA where it promotes unproductive reactions. To test if UvrD limits the number and/or the size of RecA-DNA structures in vivo, an uvrD mutation was combined with recA-gfp. This recA allele allows the number of RecA structures and the amount of RecA at these structures to be assayed in living cells. uvrD mutants show a threefold increase in the number of RecA-GFP foci, and these foci are, on average, nearly twofold higher in relative intensity. The increased number of RecA-green fluorescent protein foci in the uvrD mutant is dependent on recF, recO, recR, recJ, and recQ. The increase in average relative intensity is dependent on recO and recQ. These data support an in vivo role for UvrD in removing RecA from the DNA. Copyright © 2007, American Society for Microbiology. All Rights Reserved.},
+   author = {Richard C. Centore and Steven J. Sandler},
+   doi = {10.1128/JB.01777-06/SUPPL_FILE/TABLE_S1.DOC},
+   issn = {00219193},
+   issue = {7},
+   journal = {Journal of Bacteriology},
+   month = {4},
+   pages = {2915-2920},
+   pmid = {17259317},
+   publisher = {American Society for Microbiology},
+   title = {UvrD limits the number and intensities of recA-green fluorescent protein structures in Escherichia coli K-12},
+   volume = {189},
+   url = {https://journals.asm.org/doi/10.1128/jb.01777-06},
+   year = {2007},
+}
+@article{Liu2013,
+   abstract = {The bacterial RecBCD helicase/nuclease shows broad, and apparently static, heterogeneity in the unwinding rate manifest by individual molecules: here it is shown that transiently halting an enzyme during processive translocation allows for a change, most likely conformational, such that the velocity of the molecule after pausing can fall anywhere within the spectrum of rates seen for a population. The bacterial RecBCD helicase/nuclease shows broad heterogeneity in unwinding rates of individual molecules. Stephen Kowalczykowski and colleagues have investigated this behaviour and find that transiently stopping the enzyme during processive translocation allows for a change, probably conformational, such that the velocity of the molecule after pausing can fall anywhere within the spectrum of rates seen for a population. The interpretation is that ligand binding stabilizes a particular equilibrium conformational sub-state that can persist for the duration of unwinding of the substrates used, and that determines the rate for that molecule. Single-molecule studies can overcome the complications of asynchrony and ensemble-averaging in bulk-phase measurements, provide mechanistic insights into molecular activities, and reveal interesting variations between individual molecules1,2,3. The application of these techniques to the RecBCD helicase of Escherichia coli has resolved some long-standing discrepancies, and has provided otherwise unattainable mechanistic insights into its enzymatic behaviour4,5,6. Enigmatically, the DNA unwinding rates of individual enzyme molecules are seen to vary considerably6,7,8, but the origin of this heterogeneity remains unknown. Here we investigate the physical basis for this behaviour. Although any individual RecBCD molecule unwound DNA at a constant rate for an average of approximately 30,000 steps, we discover that transiently halting a single enzyme–DNA complex by depleting Mg2+-ATP could change the subsequent rates of DNA unwinding by that enzyme after reintroduction to ligand. The proportion of molecules that changed rate increased exponentially with the duration of the interruption, with a half-life of approximately 1 second, suggesting that a conformational change occurred during the time that the molecule was arrested. The velocity after pausing an individual molecule was any velocity found in the starting distribution of the ensemble. We suggest that substrate binding stabilizes the enzyme in one of many equilibrium conformational sub-states that determine the rate-limiting translocation behaviour of each RecBCD molecule. Each stabilized sub-state can persist for the duration (approximately 1 minute) of processive unwinding of a DNA molecule, comprising tens of thousands of catalytic steps, each of which is much faster than the time needed for the conformational change required to alter kinetic behaviour. This ligand-dependent stabilization of rate-defining conformational sub-states results in seemingly static molecule-to-molecule variation in RecBCD helicase activity, but in fact reflects one microstate from the equilibrium ensemble that a single molecule manifests during an individual processive translocation event.},
+   author = {Bian Liu and Ronald J. Baskin and Stephen C. Kowalczykowski},
+   doi = {10.1038/nature12333},
+   issn = {1476-4687},
+   issue = {7463},
+   journal = {Nature 2013 500:7463},
+   keywords = {Double,Kinetics,Single,molecule biophysics,strand DNA breaks},
+   month = {7},
+   pages = {482-485},
+   pmid = {23851395},
+   publisher = {Nature Publishing Group},
+   title = {DNA unwinding heterogeneity by RecBCD results from static molecules able to equilibrate},
+   volume = {500},
+   url = {https://www.nature.com/articles/nature12333},
+   year = {2013},
+}
+@article{Joo2006,
+   abstract = {RecA and its homologs help maintain genomic integrity through recombination. Using single-molecule fluorescence assays and hidden Markov modeling, we show the most direct evidence that a RecA filament grows and shrinks primarily one monomer at a time and only at the extremities. Both ends grow and shrink, contrary to expectation, but a higher binding rate at one end is responsible for directional filament growth. Quantitative rate determination also provides insights into how RecA might control DNA accessibility in vivo. We find that about five monomers are sufficient for filament nucleation. Although ordinarily single-stranded DNA binding protein (SSB) prevents filament nucleation, single RecA monomers can easily be added to an existing filament and displace SSB from DNA at the rate of filament extension. This supports the proposal for a passive role of RecA-loading machineries in SSB removal. © 2006 Elsevier Inc. All rights reserved.},
+   author = {Chirlmin Joo and Sean A. McKinney and Muneaki Nakamura and Ivan Rasnik and Sua Myong and Taekjip Ha},
+   doi = {10.1016/j.cell.2006.06.042},
+   issn = {00928674},
+   issue = {3},
+   journal = {Cell},
+   month = {8},
+   pages = {515-527},
+   pmid = {16901785},
+   publisher = {Elsevier B.V.},
+   title = {Real-Time Observation of RecA Filament Dynamics with Single Monomer Resolution},
+   volume = {126},
+   url = {http://www.cell.com/article/S0092867406009470/fulltext http://www.cell.com/article/S0092867406009470/abstract https://www.cell.com/cell/abstract/S0092-8674(06)00947-0},
+   year = {2006},
+}
+@article{Galletto2006,
+   abstract = {Escherichia coli RecA is essential for the repair of DNA double-strand breaks by homologous recombination1. Repair requires the formation of a RecA nucleoprotein filament. Previous studies have indicated a mechanism of filament assembly whereby slow nucleation of RecA protein on DNA is followed by rapid growth2,3,4,5,6,7. However, many aspects of this process remain unclear, including the rates of nucleation and growth and the involvement of ATP hydrolysis, largely because visualization at the single-filament level is lacking. Here we report the direct observation of filament assembly on individual double-stranded DNA molecules using fluorescently modified RecA. The nucleoprotein filaments saturate the DNA and extend it ∼1.6-fold. At early time points, discrete RecA clusters are seen, permitting analysis of single-filament growth from individual nuclei. Formation of nascent RecA filaments is independent of ATP hydrolysis but is dependent on the type of nucleotide cofactor and the RecA concentration, suggesting that nucleation involves binding of ∼4–5 ATP–RecA monomers to DNA. Individual RecA filaments grow at rates of 3–10 nm s-1. Growth is bidirectional and, in contrast to nucleation, independent of nucleotide cofactor, suggesting addition of ∼2–7 monomers s-1. These results are in accord with extensive genetic and biochemical studies, and indicate that assembly in vivo is controlled at the nucleation step. We anticipate that our approach and conclusions can be extended to the related eukaryotic counterpart, Rad51 (see ref.8), and to regulation by assembly mediators9,10,11.},
+   author = {Roberto Galletto and Ichiro Amitani and Ronald J. Baskin and Stephen C. Kowalczykowski},
+   doi = {10.1038/nature05197},
+   issn = {1476-4687},
+   issue = {7113},
+   journal = {Nature 2006 443:7113},
+   keywords = {Humanities and Social Sciences,Science,multidisciplinary},
+   month = {9},
+   pages = {875-878},
+   pmid = {16988658},
+   publisher = {Nature Publishing Group},
+   title = {Direct observation of individual RecA filaments assembling on single DNA molecules},
+   volume = {443},
+   url = {https://www.nature.com/articles/nature05197},
+   year = {2006},
+}
+@article{Handa2009,
+   abstract = {Fluorescent fusion proteins are exceedingly useful for monitoring protein localization in situ or visualizing protein behavior at the single molecule level. Unfortunately, some proteins are rendered inactive by the fusion. To circumvent this problem, we fused a hyperactive RecA protein (RecA803 protein) to monomeric red fluorescent protein (mRFP1) to produce a functional protein (RecA-RFP) that is suitable for in vivo and in vitro analysis. In vivo, the RecA-RFP partially restoresUVresistance, conjugational recombination, and SOS induction to recA- cells. In vitro, the purified RecA-RFP protein forms a nucleoprotein filament whose kcat for single-stranded DNA-dependent ATPase activity is reduced ∼3-fold relative to wild-type protein, and which is largely inhibited by single-stranded DNA-binding protein. However, RecA protein is also a dATPase; dATP supports RecA-RFP nucleoprotein filament formation in the presence of single-stranded DNA-binding protein. Furthermore, as for the wild-type protein, the activities of RecA-RFP are further enhanced by shifting thepHto 6.2. As a consequence, RecA-RFP is proficient for DNA strand exchange with dATP or at lower pH. Finally, using single molecule visualization, RecA-RFP was seen to assemble into a continuous filament on duplex DNA, and to extend the DNA ∼1.7-fold. Consistent with its attenuated activities, RecA-RFP nucleates onto double-stranded DNA ∼3-fold more slowly than the wild-type protein, but still requires ∼3 monomers to form the rate-limited nucleus needed for filament assembly. Thus, RecA-RFP reveals that its attenuated biological functions correlate with a reduced frequency of nucleoprotein filament nucleation at the single molecule level. © 2009 by The American Society for Biochemistry and Molecular Biology, Inc.},
+   author = {Naofumi Handa and Ichiro Amitani and Nathan Gumlaw and Steven J. Sandler and Stephen C. Kowalczykowski},
+   doi = {10.1074/jbc.M109.004895},
+   issn = {00219258},
+   issue = {28},
+   journal = {Journal of Biological Chemistry},
+   month = {7},
+   pages = {18664-18673},
+   pmid = {19419960},
+   publisher = {Elsevier},
+   title = {Single molecule analysis of a red fluorescent RecA protein reveals a defect in nucleoprotein filament nucleation that relates to its reduced biological functions},
+   volume = {284},
+   url = {http://www.jbc.org/article/S0021925819811997/fulltext http://www.jbc.org/article/S0021925819811997/abstract https://www.jbc.org/article/S0021-9258(19)81199-7/abstract},
+   year = {2009},
+}
+@article{Forget2012,
+   abstract = {The search for DNA homology is vital to recombinational DNA repair and occurs by intersegment contact sampling wherein the three-dimensional conformational state of the double-stranded DNA target and the length of the homologous RecA–single-stranded DNA filament have important roles. During DNA repair by homologous recombination, the molecule containing a double-strand break must find an undamaged, intact, exact copy of the sequence at the break to initiate a process known as strand exchange. This is facilitated by cooperative binding of a RecA family strand-exchange protein to a single-strand tail of the broken DNA. But how does the RecA–DNA filament find its matching sequence, which represents a tiny fraction of the total DNA content? In a new study, Anthony Forget and Stephen Kowalczykowski show that weak, transient contacts by the RecA–DNA filament with duplex DNA allow it to sample three-dimensional space to accelerate the recognition of homologous sequence. DNA breaks can be repaired with high fidelity by homologous recombination. A ubiquitous protein that is essential for this DNA template-directed repair is RecA1. After resection of broken DNA to produce single-stranded DNA (ssDNA), RecA assembles on this ssDNA into a filament with the unique capacity to search and find DNA sequences in double-stranded DNA (dsDNA) that are homologous to the ssDNA. This homology search is vital to recombinational DNA repair, and results in homologous pairing and exchange of DNA strands. Homologous pairing involves DNA sequence-specific target location by the RecA–ssDNA complex. Despite decades of study, the mechanism of this enigmatic search process remains unknown. RecA is a DNA-dependent ATPase, but ATP hydrolysis is not required for DNA pairing and strand exchange2,3, eliminating active search processes. Using dual optical trapping to manipulate DNA, and single-molecule fluorescence microscopy to image DNA pairing, we demonstrate that both the three-dimensional conformational state of the dsDNA target and the length of the homologous RecA–ssDNA filament have important roles in the homology search. We discovered that as the end-to-end distance of the target dsDNA molecule is increased, constraining the available three-dimensional (3D) conformations of the molecule, the rate of homologous pairing decreases. Conversely, when the length of the ssDNA in the nucleoprotein filament is increased, homology is found faster. We propose a model for the DNA homology search process termed ‘intersegmental contact sampling’, in which the intrinsic multivalent nature of the RecA nucleoprotein filament is used to search DNA sequence space within 3D domains of DNA, exploiting multiple weak contacts to rapidly search for homology. Our findings highlight the importance of the 3D conformational dynamics of DNA, reveal a previously unknown facet of the homology search, and provide insight into the mechanism of DNA target location by this member of a universal family of proteins.},
+   author = {Anthony L. Forget and Stephen C. Kowalczykowski},
+   doi = {10.1038/nature10782},
+   issn = {1476-4687},
+   issue = {7385},
+   journal = {Nature 2012 482:7385},
+   keywords = {Homologous recombination,Single,Structural biology,molecule biophysics},
+   month = {2},
+   pages = {423-427},
+   pmid = {22318518},
+   publisher = {Nature Publishing Group},
+   title = {Single-molecule imaging of DNA pairing by RecA reveals a three-dimensional homology search},
+   volume = {482},
+   url = {https://www.nature.com/articles/nature10782},
+   year = {2012},
+}
+@article{Ragunathan2012,
+   abstract = {During homologous recombination, RecA forms a helical filament on a single stranded (ss) DNA that searches for a homologous double stranded (ds) DNA and catalyzes the exchange of complementary base pairs to form a new heteroduplex. Using single molecule fluorescence imaging tools with high spatiotemporal resolution we characterized the encounter complex between the RecA filament and dsDNA. We present evidence in support of the 'sliding model' wherein a RecA filament diffuses along a dsDNA track. We further show that homology can be detected during sliding. Sliding occurs with a diffusion coefficient of approximately 8000 bp2/s allowing the filament to sample several hundred base pairs before dissociation. Modeling suggests that sliding can accelerate homology search by as much as 200 fold. Homology recognition can occur for as few as 6 nt of complementary basepairs with the recognition efficiency increasing for higher complementarity. Our data represents the first example of a DNA bound multi-protein complex which can slide along another DNA to facilitate target search. © Ragunathan et al.},
+   author = {Kaushik Ragunathan and Cheng Liu and Taekjip Ha},
+   doi = {10.7554/ELIFE.00067},
+   issn = {2050084X},
+   issue = {1},
+   journal = {eLife},
+   month = {12},
+   pmid = {23240082},
+   publisher = {eLife Sciences Publications Ltd},
+   title = {RecA filament sliding on DNA facilitates homology search},
+   volume = {2012},
+   year = {2012},
+}
+@article{Spies2003,
+   abstract = {RecBCD enzyme is a heterotrimeric helicase/nuclease that initiates homologous recombination at double-stranded DNA breaks. Several of its activities are regulated by the DNA sequence χ (5′-GCTGGTGG-3′), which is recognized in cis by the translocating enzyme. When RecBCD enzyme encounters χ, the intensity and polarity of its nuclease activity are changed, and the enzyme gains the ability to load RecA protein onto the χ-containing, unwound single-stranded DNA. Here, we show that interaction with χ also affects translocation by RecBCD enzyme. By observing translocation of individual enzymes along single molecules of DNA, we could see RecBCD enzyme pause precisely at χ. Furthermore, and more unexpectedly, after pausing at χ, the enzyme continues translocating but at approximately one-half the initial rate. We propose that interaction with χ results in an enzyme in which one of the two motor subunits, likely the RecD motor, is uncoupled from the holoenzyme to produce the slower translocase.},
+   author = {Maria Spies and Piero R. Bianco and Mark S. Dillingham and Naofumi Handa and Ronald J. Baskin and Stephen C. Kowalczykowski},
+   doi = {10.1016/S0092-8674(03)00681-0},
+   issn = {0092-8674},
+   issue = {5},
+   journal = {Cell},
+   month = {9},
+   pages = {647-654},
+   pmid = {13678587},
+   publisher = {Cell Press},
+   title = {A Molecular Throttle: The Recombination Hotspot χ Controls DNA Translocation by the RecBCD Helicase},
+   volume = {114},
+   year = {2003},
+}
