--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -666,3 +666,16 @@
    volume = {114},
    year = {2003},
 }
+@article{Ghodke2019,
+   abstract = {The RecA protein orchestrates the cellular response to DNA damage via its multiple roles in the bacterial SOS response. Lack of tools that provide unambiguous access to the various RecA states within the cell have prevented understanding of the spatial and temporal changes in RecA structure/function that underlie control of the damage response. Here, we develop a monomeric C-terminal fragment of the l repressor as a novel fluorescent probe that specifically interacts with RecA filaments on single-stranded DNA (RecA*). Single-molecule imaging techniques in live cells demonstrate that RecA is largely sequestered in storage structures during normal metabolism. Upon DNA damage, the storage structures dissolve and the cytosolic pool of RecA rapidly nucleates to form early SOS-signaling complexes, maturing into DNA-bound RecA bundles at later time points. Both before and after SOS induction, RecA* largely appears at locations distal from replisomes. Upon completion of repair, RecA storage structures reform.},
+   author = {Harshad Ghodke and Bishnu P. Paudel and Jacob S. Lewis and Slobodan Jergic and Kamya Gopal and Zachary J. Romero and Elizabeth A. Wood and Roger Woodgate and Michael M. Cox and Antoine M.Van Oijen},
+   doi = {10.7554/ELIFE.42761},
+   issn = {2050084X},
+   journal = {eLife},
+   month = {2},
+   pmid = {30719973},
+   publisher = {eLife Sciences Publications Ltd},
+   title = {Spatial and temporal organization of reca in the escherichia coli dna-damage response},
+   volume = {8},
+   year = {2019},
+}
