Added a couple microscopy studies of RecA

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -679,3 +679,37 @@
    volume = {8},
    year = {2019},
 }
+@article{Renzette2007,
+   abstract = {RecA plays a central role in recombination, DNA repair and SOS induction through forming a RecA-DNA helical filament. Biochemical observations show that at low ratios to RecA, DinI and RecX stabilize and destabilize RecA-DNA filaments, respectively, and that the C-terminal 17 residues of RecA are important for RecX function. RecA-DNA filament formation was assayed in vivo using RecA-GFP foci formation in log-phase and UV-irradiated cells. In log-phase cells, dinI mutants have fewer foci than wild type and that recX mutants have more foci than wild type. A recA Δ17::gfp mutant had more foci like a recX mutant. dinI recX double mutants have the same number of foci as dinI mutants alone, suggesting that dinI is epistatic to recX. After UV treatment, the dinI, recX and dinI recX mutants differed in their ability to form foci. All three mutants had fewer foci than wild type. The dinI mutant's foci persisted longer than wild-type foci. Roles of DinI and RecX after UV treatment differed from those during log-phase growth and may reflect the different DNA substrates, population of proteins or amounts during the SOS response. These experiments give new insight into the roles of these proteins. © 2006 The Authors.},
+   author = {Nicholas Renzette and Nathan Gumlaw and Steven J. Sandler},
+   doi = {10.1111/J.1365-2958.2006.05496.X},
+   isbn = {4135451578},
+   issn = {1365-2958},
+   issue = {1},
+   journal = {Molecular Microbiology},
+   month = {1},
+   pages = {103-115},
+   pmid = {17163974},
+   publisher = {John Wiley & Sons, Ltd},
+   title = {DinI and RecX modulate RecA–DNA structures in Escherichia coli K-12},
+   volume = {63},
+   url = {https://onlinelibrary.wiley.com/doi/full/10.1111/j.1365-2958.2006.05496.x https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2958.2006.05496.x https://onlinelibrary.wiley.com/doi/10.1111/j.1365-2958.2006.05496.x},
+   year = {2007},
+}
+@article{Klimova2020,
+   abstract = {RecA is essential for double-strand-break repair (DSBR) and the SOS response in Escherichia coli K-12. RecN is an SOS protein and a member of the Structural Maintenance of Chromosomes family of proteins thought to play a role in sister chromatid cohesion/interactions during DSBR. Previous studies have shown that a plasmid-encoded recA4190 (Q300R) mutant had a phenotype similar to DrecN (mitomycin C sensitive and UV resistant). It was hypothesized that RecN and RecA physically interact, and that recA4190 specifically eliminated this interaction. To test this model, an epistasis analysis between recA4190 and DrecN was performed in wild-type and recBC sbcBC cells. To do this, recA4190 was first transferred to the chromosome. As single mutants, recA4190 and DrecN were Rec+ as measured by transductional recombination, but were 3-fold and 10-fold decreased in their ability to do I-SceIinduced DSBR, respectively. In both cases, the double mutant had an additive phenotype relative to either single mutant. In the recBC sbcBC background, recA4190 and DrecN cells were very UVS (sensitive), Rec2, had high basal levels of SOS expression and an altered distribution of RecA-GFP structures. In all cases, the double mutant had additive phenotypes. These data suggest that recA4190 (Q300R) and DrecN remove functions in genetically distinct pathways important for DNA repair, and that RecA Q300 was not important for an interaction between RecN and RecA in vivo. recA4190 (Q300R) revealed modest phenotypes in a wild-type background and dramatic phenotypes in a recBC sbcBC strain, reflecting greater stringency of RecA's role in that background.},
+   author = {Anastasiia N. Klimova and Steven J. Sandler},
+   doi = {10.1534/GENETICS.120.303476},
+   issn = {19432631},
+   issue = {2},
+   journal = {Genetics},
+   keywords = {Bacteria,DNA repair,Homologous recombination,SOS response},
+   month = {10},
+   pages = {381-393},
+   pmid = {32816866},
+   publisher = {Oxford Academic},
+   title = {An Epistasis Analysis of recA and recN in Escherichia coli K-12},
+   volume = {216},
+   url = {https://dx.doi.org/10.1534/genetics.120.303476},
+   year = {2020},
+}
