Added ref to Alessia's SPT article

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -713,3 +713,20 @@
    url = {https://dx.doi.org/10.1534/genetics.120.303476},
    year = {2020},
 }
+@article{Lepore2023,
+   abstract = {Efficient DNA repair is crucial for maintaining genome integrity and ensuring cell survival. In Escherichia coli , RecBCD plays a crucial role in processing DNA ends following a DNA double-strand break (DSB) to initiate repair by homologous recombination. While RecBCD has been extensively studied in vitro , less is known about how it contributes to rapid and efficient repair in living bacteria. Here, we perform single-molecule microscopy to investigate DNA repair in real-time in E. coli . We quantify RecB single-molecule mobility and monitor the induction of the DNA damage response (SOS response) in individual cells. We show that RecB binding to broken DNA ends leads to efficient repair without SOS induction. In contrast, in a RecB mutant with modified activities leading to the activation of an alternative repair pathway, repair is less efficient and leads to high SOS induction. Our findings reveal how subtle alterations in RecB activity profoundly impact the efficiency of DNA repair in E. coli .
+
+### Competing Interest Statement
+
+The authors have declared no competing interest.},
+   author = {Alessia Lepore and Daniel Thédié and Lorna McLaren and Benura Azeroglu and Oliver J. Pambos and Achillefs N. Kapanidis and Meriem El Karoui},
+   doi = {10.1101/2023.12.22.573010},
+   isbn = {10.1101/2023.12.2},
+   journal = {bioRxiv},
+   month = {12},
+   pages = {2023.12.22.573010},
+   publisher = {Cold Spring Harbor Laboratory},
+   title = {In vivo single-molecule imaging of RecB reveals efficient repair of DNA damage in Escherichia coli},
+   url = {https://www.biorxiv.org/content/10.1101/2023.12.22.573010v1 https://www.biorxiv.org/content/10.1101/2023.12.22.573010v1.abstract},
+   year = {2023},
+}
