Added mutants biexp fit SI Fig

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -125,16 +125,6 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 \label{SIFig:dye_bleaching}
 \end{suppfigure*}
 
-
-% RecB binding times at different sampling rates
-\begin{suppfigure*}[htbp]
-\begin{center}
-%\includegraphics[width=\textwidth]{}
-\end{center}
-\caption{}
-\label{SIFig:frame_intervals}
-\end{suppfigure*}
-
 % Displacements simulation
 \begin{suppfigure*}[htbp]
     \begin{center}
@@ -142,4 +132,13 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \end{center}
     \caption{Histogram of expected displacements for a molecule diffusing at 1 \ums\ over a 500 ms frame time.}
     \label{SIFig:displacement_simul}
+\end{suppfigure*}
+
+% Mutants: RecB spot lifetime histogram bi-exp fits
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_RecB_fits.pdf}
+    \end{center}
+    \caption{RecB spot lifetime histograms for wild-type (WT), \dreca, \teneighty\ and \teneighty -\dreca\ strains, at 0 and 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines).}
+    \label{SIFig:mutants_biexp_fits}
 \end{suppfigure*}
