Added short intro to the mutants section

--- a/Results.tex
+++ b/Results.tex
@@ -110,11 +110,13 @@ We observe two regimes of DNA repair after ciprofloxacin exposure. At sub-MIC ci
 \end{figure*}
 
 %% Fitting spot lifetime histograms with bi-exponential model
-
+To better understand the factors that contribute to the dissociation of RecB from the DNA, we imaged three different mutants (\dreca, \teneighty\ and the \teneighty -\dreca\ double-mutant), exposed to either no or 30 ng/mL ciprofloxacin. Similarly to the WT, we computed histograms of RecB spot lifetimes, and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the slower rate, corresponding to the dissociation of DNA-bound RecB molecules. The corresponding lifetimes for DNA-bound RecB are shown on Figure \ref{Fig:mutants}A.
 
 %%% drecA
 % TO BE UPDATED
-RecA contributes directly or indirectly to RecB dissociation from DNA, presumably during its loading on DNA by RecB.
+% Problem: lifetime is the same in WT and drecA at cipro 30.
+In the \dreca\ mutant in the absence of ciprofloxacin, the lifetime of DNA-bound RecB is increased compared to the WT strain.
+
 
 %%% RecB1080 has even longer lifetime than drecA. This means something else than RecA loading deficiency must make RecB dissociation difficult. We can hypothesise that it's RecB nuclease deficiency, which might make it hard for RecBCD to come off the DNA once it's threaded in
 % TO BE UPDATED
